// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Secret Accessors Allows to set data key on stringData 1`] = `
Array [
  Object {
    "apiVersion": "v1",
    "data": Object {
      "test": "Zm9v",
    },
    "kind": "Secret",
    "metadata": Object {
      "labels": Object {
        "prunable": "true",
      },
      "name": "test-c8eb60f8-77f7g47dgb",
    },
    "stringData": Object {
      "test": "bar",
    },
  },
]
`;

exports[`Secret Accessors Metadata getter 1`] = `
ApiObjectMetadataDefinition {
  "_additionalAttributes": Object {
    "labels": Object {
      "prunable": "true",
      "test": "true",
    },
    "name": Lazy {
      "producer": Object {
        "produce": [Function],
      },
    },
    "namespace": undefined,
  },
  "annotations": Object {},
  "finalizers": Array [],
  "labels": Object {
    "prunable": "true",
    "test": "true",
  },
  "name": Lazy {
    "producer": Object {
      "produce": [Function],
    },
  },
  "namespace": undefined,
  "ownerReferences": Array [],
}
`;

exports[`Secret Accessors Throws when trying to set stringData key on data 1`] = `"Secret data key \\"test\\" is already used in stringData, which takes precedence"`;

exports[`Secret Loading files Encoding data value from file's contents 1`] = `
Array [
  Object {
    "apiVersion": "v1",
    "data": Object {
      "file.enc": "c2VjcmV0IyEyMw==",
    },
    "kind": "Secret",
    "metadata": Object {
      "labels": Object {
        "prunable": "true",
      },
      "name": "test-c8eb60f8-g7hfd9465k",
    },
  },
]
`;

exports[`Secret Loading files Encoding data value from file's contents with custom key 1`] = `
Array [
  Object {
    "apiVersion": "v1",
    "data": Object {
      "greeting.enc": "c2VjcmV0IyEyMw==",
    },
    "kind": "Secret",
    "metadata": Object {
      "labels": Object {
        "prunable": "true",
      },
      "name": "test-c8eb60f8-hb7bh85tb5",
    },
  },
]
`;

exports[`Secret Props Empty Secret 1`] = `
Array [
  Object {
    "apiVersion": "v1",
    "kind": "Secret",
    "metadata": Object {
      "labels": Object {
        "prunable": "true",
      },
      "name": "test-c8eb60f8-5m7k5t56kf",
    },
  },
]
`;

exports[`Secret Props Secret from props 1`] = `
Array [
  Object {
    "apiVersion": "v1",
    "data": Object {
      "foo": "c2VjcmV0IyEyMw==",
    },
    "immutable": true,
    "kind": "Secret",
    "metadata": Object {
      "annotations": Object {
        "annotation": "test",
      },
      "labels": Object {
        "label": "test",
        "prunable": "true",
      },
      "name": "test-c8eb60f8-2f6d9fk5k8",
    },
    "stringData": Object {
      "bar": "hello",
    },
    "type": "Opaque",
  },
]
`;
